Curve Fill Node creates edges where there should be none #98517

Closed
opened 2022-05-31 12:35:17 +02:00 by Jure Markovic · 23 comments

System Information
Operating system:Windows 10
Graphics card: Intel integrated

Blender Version
Broken: (3.1.2, 3.2.0, 3.3.0 )

Short description of error
You can already see in the spreadsheet that there are 2 extra edges that are not shown in the viewport. But they are there. They mess up the "mesh island" node also, which shows only 4 mesh islands instead of 6.
To actually see the unwanted edges you need to apply the modifier and enter the edit mode. They will appear then and they will remain visible now even when you go back into object mode.

This "Bug" will not happen if you convert the mesh to curve outside the geometry nodes (right click in the viewport - Convert to curve). Look at the hidden object named curves. If you use the "Curve Fill" node to this curves object, the result is good, with no extra edges. This could mean that the problem lies inside the "mesh to curve" node.

Curve Fill Node creates edges where there should be none

Exact steps for others to reproduce the error

  • Open .blend file
  • Check edge count in spreadsheet (26)
  • Apply modifier
  • Switch to edit mode then back again to object mode
  • Additional edges(2) are now visible in viewport
Before when modifier is applied
image.png image.png
fill_curve_bug.blend
**System Information** Operating system:Windows 10 Graphics card: Intel integrated **Blender Version** Broken: (3.1.2, 3.2.0, 3.3.0 ) **Short description of error** You can already see in the spreadsheet that there are 2 extra edges that are not shown in the viewport. But they are there. They mess up the "mesh island" node also, which shows only 4 mesh islands instead of 6. To actually see the unwanted edges you need to apply the modifier and enter the edit mode. They will appear then and they will remain visible now even when you go back into object mode. This "Bug" will not happen if you convert the mesh to curve outside the geometry nodes (right click in the viewport - Convert to curve). Look at the hidden object named curves. If you use the "Curve Fill" node to this curves object, the result is good, with no extra edges. This could mean that the problem lies inside the "mesh to curve" node. Curve Fill Node creates edges where there should be none **Exact steps for others to reproduce the error** - Open .blend file - Check edge count in spreadsheet (26) - Apply modifier - Switch to edit mode then back again to object mode - Additional edges(2) are now visible in viewport | Before | when modifier is applied | | -- | -- | | ![image.png](https://archive.blender.org/developer/F13124906/image.png) | ![image.png](https://archive.blender.org/developer/F13124908/image.png) | [fill_curve_bug.blend](https://archive.blender.org/developer/F13124557/fill_curve_bug.blend)
Author

Added subscriber: @Jure-Markovic

Added subscriber: @Jure-Markovic

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm. The problem is in the fill node.
The triangulation mode also solves the problem, I suspect that the problem is in the N-gon mode.
2022-05-31 14-35-48.mp4
Edit: There can also be an arbitrary number of them, depending on the position of the source polygons.

I can confirm. The problem is in the fill node. The triangulation mode also solves the problem, I suspect that the problem is in the N-gon mode. [2022-05-31 14-35-48.mp4](https://archive.blender.org/developer/F13124649/2022-05-31_14-35-48.mp4) Edit: There can also be an arbitrary number of them, depending on the position of the source polygons.
Iliya Katushenock self-assigned this 2022-05-31 13:42:13 +02:00

This comment was removed by @mod_moder

*This comment was removed by @mod_moder*
Iliya Katushenock removed their assignment 2022-05-31 13:42:53 +02:00

Added subscriber: @pundr

Added subscriber: @pundr

@erik85
Can you take a look at this?

@erik85 Can you take a look at this?

Added subscriber: @erik85

Added subscriber: @erik85
Member

Removed subscriber: @pundr

Removed subscriber: @pundr
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @howardt

Added subscriber: @howardt

In #98517#1367084, @mod_moder wrote:
@erik85
Can you take a look at this?

I think @howardt is a better match for this as he wrote the delaunay 2d code.
It seems to work when I add this line to first remove the outer edges as in the triangulation mode, but there's probably a more efficient way to do this in the "leave_valid_bmesh" function.

bild.png

Here's a simpler way to visualize it.

bild.png

> In #98517#1367084, @mod_moder wrote: > @erik85 > Can you take a look at this? I think @howardt is a better match for this as he wrote the delaunay 2d code. It seems to work when I add this line to first remove the outer edges as in the triangulation mode, but there's probably a more efficient way to do this in the "leave_valid_bmesh" function. ![bild.png](https://archive.blender.org/developer/F13125139/bild.png) Here's a simpler way to visualize it. ![bild.png](https://archive.blender.org/developer/F13125151/bild.png)
Member

Erik's change looks right and pretty efficient, so I will commit that change later today unless Erik wants to do it himself.

Erik's change looks right and pretty efficient, so I will commit that change later today unless Erik wants to do it himself.

In #98517#1371566, @howardt wrote:
Erik's change looks right and pretty efficient, so I will commit that change later today unless Erik wants to do it himself.

Sure, you can commit it. I haven't really tested it myself, just very quickly on one mesh so I'm not confident that it works.

> In #98517#1371566, @howardt wrote: > Erik's change looks right and pretty efficient, so I will commit that change later today unless Erik wants to do it himself. Sure, you can commit it. I haven't really tested it myself, just very quickly on one mesh so I'm not confident that it works.

This issue was referenced by f24d32f791

This issue was referenced by f24d32f791a92c72cd097afa76376caea003db1d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Howard Trickey self-assigned this 2022-06-11 18:36:09 +02:00
Author

So, in which earliest version of Blender will this fix be implemented?
Thanks for your work!

So, in which earliest version of Blender will this fix be implemented? Thanks for your work!

Probably tomorrow's patch

Probably tomorrow's patch
Author

In #98517#1372877, @mod_moder wrote:
Probably tomorrow's patch

But what build? 3.2 Stable?

> In #98517#1372877, @mod_moder wrote: > Probably tomorrow's patch But what build? 3.2 Stable?

In #98517#1372878, @Jure-Markovic wrote:

In #98517#1372877, @mod_moder wrote:
Probably tomorrow's patch

But what build? 3.2 Stable?

3.2 stable is already released, so 3.3 stable I suppose. or download the daily build tomorrow.

> In #98517#1372878, @Jure-Markovic wrote: >> In #98517#1372877, @mod_moder wrote: >> Probably tomorrow's patch > > But what build? 3.2 Stable? 3.2 stable is already released, so 3.3 stable I suppose. or download the daily build tomorrow.
Author

Sorry to be such a pain, but nobody actually answered my question. Tomorrow's build, ok. But what number is that build? 3.3 beta? Or an experimental one?
And, if I may ask another off topic question, since you are all so kind, are you saying when a stable build is once released, no patches can be added to that version?
Thanks

Sorry to be such a pain, but nobody actually answered my question. Tomorrow's build, ok. But what number is that build? 3.3 beta? Or an experimental one? And, if I may ask another off topic question, since you are all so kind, are you saying when a stable build is once released, no patches can be added to that version? Thanks

image.png
Daily builds of experiments, do fixes usually get there first?

![image.png](https://archive.blender.org/developer/F13147256/image.png) Daily builds of experiments, do fixes usually get there first?

In #98517#1372928, @Jure-Markovic wrote:
Sorry to be such a pain, but nobody actually answered my question. Tomorrow's build, ok. But what number is that build? 3.3 beta? Or an experimental one?
And, if I may ask another off topic question, since you are all so kind, are you saying when a stable build is once released, no patches can be added to that version?
Thanks

The daily build is built every night from the most recent code base (master). You can find it at https://builder.blender.org/download/daily/ Right now it's called 3.3.0 alpha.

> In #98517#1372928, @Jure-Markovic wrote: > Sorry to be such a pain, but nobody actually answered my question. Tomorrow's build, ok. But what number is that build? 3.3 beta? Or an experimental one? > And, if I may ask another off topic question, since you are all so kind, are you saying when a stable build is once released, no patches can be added to that version? > Thanks The daily build is built every night from the most recent code base (master). You can find it at https://builder.blender.org/download/daily/ Right now it's called 3.3.0 alpha.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98517
No description provided.